--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,11 +7,9 @@
 </head>
 <!-- Here put all the code that goes inside or outside our application -->
 <body>
-Before
-<br>
-<!-- Put the content of everythign inside our application-->
+<!-- Put the content of everything inside our application-->
+<%- include ('../partials/header.ejs') %>
+<%- include ('../partials/errorMessage.ejs') %>
 <%- body %> <!-- this adds everysingle bodysection from other pages into this body page-->
-<br>
-After
 </body>
 </html>
