--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,7 @@
 <!-- Ce texte sera importé de index.ejs à la partie body de layout.ejs-->
-Middle
+<h2>Recently Added</h2> 
+<div>
+    <% books.forEach(book => { %>
+        <img width="150" height="100" src="<%= book.coverImagePath %>">
+    <% }) %>
+</div>
