--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,5 +1,5 @@
 <h2> New Book </h2>
-<form action="/books" method="POST" enctype="multipart/form-data">
+<form action="/books" method="POST">
     <%- include ('_form_fields.ejs') %>
     <!-- Used Anchor Type to link (button to interact)-->
     <a href="/books"> Cancel </a>
