--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -7,4 +7,16 @@
 <br>
 <% authors.forEach(author => { %>
     <div> <%= author.name %> </div>
+    <!-- j'écris les urls dépendant des routes prédéfinies -->
+    <!-- For the View Author by Id-->
+    <a href="/authors/<%= author.id %>">View</a>
+    <a href="/authors/<%= author.id %>/edit">Edit</a>
+
+    <!-- For the delete i should use a new 
+    delete form and use the override-method library-->
+    <!-- The post method will be overriden by _method content-->
+    <!-- Include the form from the partials -->
+    <%- include('../partials/deleteForm', 
+        //Use string interpolations `` for things inside the server to be understandable
+        { url: `/authors/${author.id}` }) %>
 <% }) %> 
