--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,6 +1,6 @@
 <h2> New Author </h2>
 <form action="/authors" method="POST">
-    <%- include ('_form_fields.ejs') %>
+    <%- include ('_form_fields') %>
     <!-- Used Anchor Type to link (button to interact)-->
     <a href="/authors"> Cancel </a>
     <button type="submit"> Create </button>
