--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,6 @@
 <h2>Recently Added</h2> 
 <div>
     <% books.forEach(book => { %>
-        <img width="150" height="100" src="<%= book.coverImagePath %>">
+        <img height="150" width="100" src="<%= book.coverImagePath %>">
     <% }) %>
 </div>
