--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,11 +1,12 @@
-<h2> <%= author.name %> </h2>
+<h2><%= author.name %></h2>
 <a href="/authors/<%= author.id %>/edit"> Edit Author </a>
-<%- include('../partials/deleteForm',
-    { url: `/authors/${author.id}` }) %> 
+<%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
 <!-- We need to check if there are any books by the author before showing them -->
 <% if(booksByAuthor.length > 0) { %>
-    <h2> Books By Author </h2>
-    <% booksByAuthor.forEach(book => { %>
-        <img height="150" width="100" src="<%= book.coverImagePath %>">
-    <% }) %>
+<h2>Books By Author</h2>
+<% booksByAuthor.forEach(book => { %>
+<a href="/books/<%= book.id %>">
+<img height="150" width="100" src="<%= book.coverImagePath %>" />
+</a>
+<% }) %> 
 <% } %>
