--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,4 +1,4 @@
-<h2> Search Authors </h2> 
+<h2 class="page-header"> Search Authors </h2> 
 <form action="/authors" method="GET">
     <label> Name </label>
     <input type="text" name="name" value=<%= searchOptions.name %>>
@@ -7,10 +7,11 @@
 <br>
 <% authors.forEach(author => { %>
     <div> <%= author.name %> </div>
+<div class="btn-row">
     <!-- j'écris les urls dépendant des routes prédéfinies -->
     <!-- For the View Author by Id-->
-    <a href="/authors/<%= author.id %>">View</a>
-    <a href="/authors/<%= author.id %>/edit">Edit</a>
+    <a class="btn btn-primary" href="/authors/<%= author.id %>">View</a>
+    <a class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
 
     <!-- For the delete i should use a new 
     delete form and use the override-method library-->
@@ -19,4 +20,5 @@
     <%- include('../partials/deleteForm', 
         //Use string interpolations `` for things inside the server to be understandable
         { url: `/authors/${author.id}` }) %>
+</div>
 <% }) %> 
