--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,7 +1,9 @@
-<h2> New Author </h2>
+<h2 class="page-header"> New Author </h2>
 <form action="/authors" method="POST">
     <%- include ('_form_fields') %>
     <!-- Used Anchor Type to link (button to interact)-->
-    <a href="/authors"> Cancel </a>
-    <button type="submit"> Create </button>
+    <div class="btn-row">
+        <a class="btn btn-primary" href="/authors"> Cancel </a>
+        <button class="btn btn-primary" type="submit"> Create </button>
+    </div>
 </form>
