--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,5 +1,5 @@
-<h2><%= author.name %></h2>
-<a href="/authors/<%= author.id %>/edit"> Edit Author </a>
+<h2 class="page-header"><%= author.name %></h2>
+<a class="btn btn-primary" href="/authors/<%= author.id %>/edit"> Edit Author </a>
 <%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
 <!-- We need to check if there are any books by the author before showing them -->
 <% if(booksByAuthor.length > 0) { %>
