--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,7 +1,9 @@
-<h2> New Book </h2>
+<h2 class="page-header"> New Book </h2>
 <form action="/books" method="POST">
     <%- include ('_form_fields.ejs') %>
     <!-- Used Anchor Type to link (button to interact)-->
-    <a href="/books"> Cancel </a>
-    <button type="submit"> Create </button>
+    <div class="btn-row">
+        <a class="btn btn-primary" href="/books"> Cancel </a>
+        <button class="btn btn-primary" type="submit"> Create </button>
+    </div>
 </form>
