--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!-- Ce texte sera importé de index.ejs à la partie body de layout.ejs-->
-<h2>Recently Added</h2> 
+<h2 class="page-header">Recently Added</h2> 
 <div>
     <% books.forEach(book => { %>
     <a href="books/<%= book.id %>">
