--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -11,13 +11,18 @@
   <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
   <script defer src="/javascripts/fileUpload.js"></script>
-    <title>My library</title>
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <title>My library</title>
 </head>
 <!-- Here put all the code that goes inside or outside our application -->
 <body>
 <!-- Put the content of everything inside our application-->
+<div class="container">
 <%- include ('../partials/header.ejs') %>
-<%- include ('../partials/errorMessage.ejs') %>
-<%- body %> <!-- this adds everysingle bodysection from other pages into this body page-->
+  <div class="inner-container">
+  <%- include ('../partials/errorMessage.ejs') %>
+  <%- body %> <!-- this adds everysingle bodysection from other pages into this body page-->
+  </div>
+</div>
 </body>
 </html>
