--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
-   <nav>
-       <a href="/"> Moroccan Readers Librairy </a>
+   <nav class="header-nav">
+       <a class="header-title" href="/"> Moroccan Readers Library </a>
        <ul>
            <li> <a href="/authors"> Authors </a> </li>
            <li> <a href="/authors/new"> Add an Author </a>  </li>
