--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -8,9 +8,10 @@
 <div>Page Count : <%= book.pageCount %> </div>
 </br>
 <div>Description : <%= book.description %> </div>
-<a href="/books/<%= book.id %>/edit">Edit Book</a>
-</br>
-<a href="/authors/<%= book.author.id %>"> View Author </a>
-</br>
-<%- include('../partials/deleteForm', { url : `/books/${book.id}`}) %>
-
+<div class="form-row form-row-end btn-row">
+    <a class="btn btn-primary" href="/books/<%= book.id %>/edit">Edit Book</a>
+    </br>
+    <a class="btn btn-primary" href="/authors/<%= book.author.id %>"> View Author </a>
+    </br>
+    <%- include('../partials/deleteForm', { url : `/books/${book.id}`}) %>
+</div>
