--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="header-own-color">
    <nav class="header-nav">
        <a class="header-title" href="/"> Moroccan Readers Library </a>
        <ul>
