--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,9 +1,11 @@
 <h2 class="page-header"><%= author.name %></h2>
-<a class="btn btn-primary" href="/authors/<%= author.id %>/edit"> Edit Author </a>
-<%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
+<div class="btn-row">
+    <a class="btn btn-primary" href="/authors/<%= author.id %>/edit"> Edit Author </a>
+    <%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
+</div>
 <!-- We need to check if there are any books by the author before showing them -->
 <% if(booksByAuthor.length > 0) { %>
-<h2>Books By Author</h2>
+<h2 class="page-header">Books By Author</h2>
 <% booksByAuthor.forEach(book => { %>
 <a href="/books/<%= book.id %>">
 <img height="150" width="100" src="<%= book.coverImagePath %>" />
