--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -2,8 +2,8 @@
 <form action="/books" method="POST">
     <%- include ('_form_fields.ejs') %>
     <!-- Used Anchor Type to link (button to interact)-->
-    <div class="btn-row">
-        <a class="btn btn-primary" href="/books"> Cancel </a>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-danger" href="/books"> Cancel </a>
         <button class="btn btn-primary" type="submit"> Create </button>
     </div>
 </form>
