--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -21,12 +21,9 @@
 </div>
 </form>
 <br>
-<div>
-    <!-- foreach book we have -->
-    <% books.forEach(book => { %>
-        <!-- the search should show the image of the book-->
-    <a href="books/<%= book.id %>">
-       <img height="150" width="100" src="<%= book.coverImagePath %>">
-    </a>
-    <% }) %> 
-</div>
+<!-- foreach book we have -->
+<%- include('../partials/bookGrid', {
+    books : books,
+    large : true
+}) %>
+
