--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,8 @@
            <li> <a href="/authors/new"> Add an Author </a>  </li>
            <li> <a href="/books"> Books </a></li>
            <li> <a href="/books/new"> Add a book </a></li>
+           <li> <a href="/categories"> Categories </a></li>
+           <li> <a href="/categories/new"> Add a Category </a></li>
        </ul>
    </nav>
 </header>
