--- a/views/categories/index.ejs
+++ b/views/categories/index.ejs
@@ -1,7 +1,25 @@
-<h2> Search Categories </h2>
+<h2 class="page-header"> Search Categories </h2>
+<form action="/categories" method="GET">
+<div class="form-row">
+    <div class="form-item">
+        <label> Name :</label>
+        <input type="text" name="name" value=<%= searchOptions.name %>>
+    </div>
+</div>
+<div class="form-row form-row-end"> 
+    <button class="btn btn-primary" type="submit"> Search </button>
+</div>
+</form>
+
 <br>
 <% categories.forEach(category => {  %>
-<div>
-    <div> <%= category.name %> </div>
+<div class="category-row">
+    <div class="category-name"> 
+        <%= category.name %> 
+    </div>
+    <div class="btn-row">
+        <a class="btn btn-primary"> View </a>
+        <a class="btn btn-primary"> Edit </a>
+    </div>
 </div>
 <% }) %>
