Update Category and Show category

--- a/views/categories/index.ejs
+++ b/views/categories/index.ejs
@@ -18,8 +18,8 @@
         <%= category.name %> 
     </div>
     <div class="btn-row">
-        <a class="btn btn-primary"> View </a>
-        <a class="btn btn-primary"> Edit </a>
+        <a class="btn btn-primary" href="/categories/<%= category.id %>"> View </a>
+        <a  class="btn btn-primary" href="/categories/<%= category.id %>/edit"> Edit </a>
     </div>
 </div>
 <% }) %>
