Finalize books by Category to be shown

--- a/views/categories/show.ejs
+++ b/views/categories/show.ejs
@@ -3,3 +3,10 @@
   <a class="btn btn-primary" href="/categories/<%= category.id %>/edit"> Edit Category </a>
   <%- include('../partials/deleteForm.ejs', { url : `/categories/${category.id}` }) %>
 </div>
+<% if (booksByCategory.length > 0) { %>
+<h2 class="page-header"> Books By Category </h2>
+<%- include('../partials/bookGrid', {
+  books: booksByCategory
+}) %>
+<% } %>
+
